# zksbom

./: .gitignore  README.md
bellman-example-1/: Cargo.toml
bellman-example-1/src/: main.rs
bellman_demo/src/: main.rs
demo/: Cargo.toml  README.md
demo/_demo-data/: sbom.json
demo/data/: README.md
demo/db/: commitment.db  sbom.db
demo/src/: main.rs
demo/src/cli/: cli.rs
demo/src/commands/: get_commitment.rs  get_zk_proof.rs  upload.rs
demo/src/config/: config.rs  config.toml
demo/src/db/: database.rs  db_commitment.rs  db_sbom.rs
io/: Cargo.toml  README.md
io/src/: main.rs
merkle_tree/src/: merkle.rs
sboms/: zksbom-verifier.cdx.json  zksbom.cdx.json
scripts/: README.md  create_sbom_with_vulnerabilities.sh
test-demo/: Cargo.toml
test-demo/src/: main.rs
tmp/bellman_demo/: Cargo.toml
tmp/demo/: Cargo.toml
tmp/demo/src/: main.rs
tmp/demo/src/cli/: cli.rs
tmp/demo/src/commands/: get_commitment.rs  get_zk_proof.rs  verify.rs
tmp/demo/src/config/: config.toml
tmp/demo/src/zkp/: verify_proof.rs
tmp/merkle_tree/: Cargo.toml
zksbom/: Cargo.toml  README.md  test.json
zksbom-verifier/: Cargo.toml  README.md
zksbom-verifier/config/: config.toml
zksbom-verifier/src/: cli.rs  config.rs  main.rs  merkle.rs
zksbom/config/: config.toml
zksbom/src/: check_dependencies.rs  cli.rs  config.rs  main.rs  upload.rs
zksbom/src/database/: db_commitment.rs  db_dependency.rs  db_sbom.rs  db_vulnerability.rs
zksbom/src/method/: merkle_tree.rs  method_handler.rs
zksbom/test/sbom/: simple_example.json
zksbom/tmp/output/: proof.txt
(+8 files in other folders)
