[package]
name = "zksbom"
version = "0.1.0"
authors = ["Tom Sorger <sorger@kth.se>"]
edition = "2021"

[dependencies]
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
rusqlite = { version = "0.29", features = ["bundled"] }
clap = { version = "4.0", features = ["derive"] }
sp-core = "35.0.0"
sp-runtime = "40.1.0"
binary-merkle-tree = "16.0.0"
serde_json = "1.0.139"
hex = "0.4"
reqwest = { version = "0.11", features = ["blocking"] }
