[package]
name = "demo"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
rusqlite = { version = "0.29", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
sha2 = "0.9"
hex = "0.4.3"
binary-merkle-tree = "16.0.0"
hash-db = "0.15.2"
sp-core = "35.0.0"
sp-runtime = "40.1.0"
